fixed minor layout issues

--- a/stylesheets/app.scss
+++ b/stylesheets/app.scss
@@ -230,7 +230,7 @@ nav {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    padding: 10vh 0;
+
     border-bottom: 1px solid #fff;
     .left {
         color: #fff;
@@ -274,6 +274,10 @@ nav {
         }
     }
     @media screen and (max-width: 900px) {
+        .left {
+            margin-top: 0;
+            margin-bottom: 5vh;
+        }
         margin-left: 0;
         margin: 0 5vh;
     }
@@ -339,6 +343,7 @@ nav {
     flex-wrap: wrap;
     justify-content: space-between;
     .left {
+        margin-bottom: 30px;
         .title {
             text-transform: uppercase;
             margin-bottom: 15vh;
@@ -412,8 +417,8 @@ nav {
             justify-content: space-between;
             align-items: baseline;
             #checkb {
-                min-width: 20px;
-                min-height: 20px;
+                min-width: 15px;
+                min-height: 15px;
                 outline: none;
 
                 cursor: pointer;
@@ -426,18 +431,6 @@ nav {
                 position: relative;
             }
 
-            #checkb:checked {
-                background: rgba(40, 40, 40, 0.7);
-            }
-
-            .checkbox {
-                position: absolute;
-                display: inline-block;
-                margin: 20px;
-                width: 100px;
-                height: 100px;
-                overflow: hidden;
-            }
             p {
                 max-width: 340px;
                 font-style: normal;
